Updates from Overleaf

--- a/Likely_Examiner_Questions.tex
+++ b/Likely_Examiner_Questions.tex
@@ -2,6 +2,8 @@
 
 After having read parts of the thesis, these are some of the questions people think are likely to come up in the viva. Don't necessarily need to include an explanation in the text, but should be prepared to answer.
 
+(Also stuff I should probably know but could do with checking / reading up on.)
+
 \begin{itemize}
     \item Background/Theory
     \begin{itemize}
@@ -18,6 +20,11 @@ After having read parts of the thesis, these are some of the questions people th
         \item "Apply signal processing techniques" - what are these techniques?
         \item Why the deconvolved charge drops below 0?
         \item Explanation for the resolution comparisons. Linear and ESTAR pretty close - I think this may just be a binning artefact. Num Electrons a little wider - it systematically assigns higher energies to the hits, so the spread in energies will also be a little broader hence the wider fit. 
+    \end{itemize}
+    
+    \item Input Osc Params
+    \begin{itemize}
+        \item Selection - beam spill time and bucket structure.
     \end{itemize}
     
     \item VALOR
