--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -146,7 +146,7 @@ It should be noted that for massless particles, helicity is Lorentz invariant an
 
 The weak force is mediated by the charged $W^\pm$ and neutral $Z^0$ bosons. It is dubbed \textit{weak} because if the strong or \gls{em} forces are also present the weak force is usually subdominant. The active neutrinos only interact via the weak force (and gravity) which is one of the reasons they have been historically difficult to detect. 
 
-The weak force has two associated types of interaction; \gls{cc} interactions which are mediated by the charged \textit{W} boson and \gls{nc} interactions which are mediated by the neutral \textit{Z} boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{NC}_{weak}$, components of each of these terms may be expressed as, 
+The weak force has two associated types of interaction: \gls{cc} interactions which are mediated by the charged \textit{W} boson and \gls{nc} interactions which are mediated by the neutral \textit{Z} boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{NC}_{weak}$, components of each of these terms may be expressed as, 
 \begin{equation}\label{eqn:weak current}
 \begin{split}
     j^{CC}_{weak} &= \frac{g}{\sqrt{2}}\overline{\psi}\gamma^{\mu}P_L\psi, \\
@@ -431,7 +431,7 @@ Within the \gls{sm} Lagrangian, the Dirac mass term is given by $m_D\overline{\p
     &= m_D(\overline{\psi_L}\psi_R + \overline{\psi_R}\psi_L),
 \end{split}
 \end{equation} 
-where the second step follows from \EquationRef{eqn:chiral identity}. Naturally, to have a non-zero Dirac mass term, particles require a left and right handed chiral state. This is the mass generation method that all particles in the \gls{sm} follow and hence why neutrinos are massless in the \gls{sm}. To give the neutrino mass in this way, one could just introduce a field associated with a right handed neutrino. This would usually correspond to the left handed neutrinos being the \textit{active} ones, whilst the right handed neutrinos would be considered \textit{sterile}.
+where the second step follows from \EquationRef{eqn:chiral identity}. Naturally, to have a non-zero Dirac mass term, particles require a left and right handed chiral state. This is the mass generation method that all particles in the \gls{sm} follow and hence why neutrinos are massless in the \gls{sm}. To give the neutrino mass in this way, a field associated with a right handed neutrino could be introduced. This would usually correspond to the left handed neutrinos being the \textit{active} ones, whilst the right handed neutrinos would be considered \textit{sterile}.
 \begin{comment}
 Since left handed particles form a doublet under \SUgroup2 they have non-zero weak isospin and because right handed particles are a singlet under \SUgroup2, their weak isospin is equal to zero. Therefore, in order to get a term where the isospin sums to zero, which is a requirement for the Lagrangian to be gauge invariant, an additional field is needed that is also a doublet under \SUgroup2. This field is a result of the neutral Higgs boson, $\phi^0$, and the Dirac mass is given by
 \end{comment}
@@ -475,7 +475,7 @@ where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$
     m_2 \simeq m_R.
 \end{split}
 \end{equation}
-Since $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called Type I \footnote{A number of other seesaw mechanisms exist which typically involve the exchange of a particle such as a heavy Majorana neutrino as is the case in the Type I mechanism \cite{White_Paper}.} \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but can be extended to include three active neutrinos and arbitrary number of sterile neutrinos and does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
+Since $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called Type I \footnote{A number of other seesaw mechanisms exist which typically involve the exchange of a particle such as a heavy Majorana neutrino as is the case in the Type I mechanism \cite{White_Paper}.} \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but can be extended to include three active neutrinos and an arbitrary number of sterile neutrinos and does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
 
 \subsection{Sterile Neutrino Oscillations}\label{sec:sterile_neutrino_oscillations}
