--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -514,7 +514,7 @@ This is an elastic process that has both a \gls{cc} and \gls{nc} component, howe
 \label{fig:NC_Feynman_diagrams}
 \end{figure}
 
-\textcolor{red}{FIGURE SHOWING THE TOTAL (+ BREAKDOWN) NEUTRINO CC CROSS-SECTION AS A FUNCTION OF ENERGY. IS THERE AN UPDATED VERSION THAT INCLUDES MEC? - CAN'T FIND ONE ONLINE.. IS THERE A NC VERSION TOO?}
+%\textcolor{red}{FIGURE SHOWING THE TOTAL (+ BREAKDOWN) NEUTRINO CC CROSS-SECTION AS A FUNCTION OF ENERGY. IS THERE AN UPDATED VERSION THAT INCLUDES MEC? - CAN'T FIND ONE ONLINE.. IS THERE A NC VERSION TOO?}
 
 \section{SBND}\label{sec:SBND}
 
@@ -626,7 +626,7 @@ The large event rate and the high resolution event reconstruction provided may a
     \item Light Dark Matter - Assuming a dark matter particle has an associated light mediator particle which interacts with quarks, the high intensity proton beam will produce a dark matter beam alongside neutrinos. The dark matter particles will propagate to the detectors alongside the neutrinos where they may scatter off the argon nuclei. Neutrinos will however represent a large background in such search \cite{SBN_paper}. 
     \item Large Extra Dimensions - The neutrino mass scale could be explained by the presence of additional dimensions. The right handed neutrinos would be able to propagate in the extra dimensions whilst the active neutrinos would be confined to the standard dimensions \cite{SBN_paper}. 
     \item Heavy Sterile Neutrinos - If heavy sterile neutrinos such as those present in the seesaw-mechanism discussed in \SectionRef{sec:seesaw_mechanism} are of an MeV mass scale, they may be produced in the \gls{bnb} vie meson decay. They would then propagate along the beam line and their decay products may be observed in the detectors \cite{SBN_paper}\cite{MeV_scale_sterile_neutrino}.
-    \item Dark Neutrinos - A beam neutrino interacts with an argon neucleus and scatters to a dark neutrino. The dark neutrino decays to a dark boson (and neutrino) and in turn the dark boson decays to an \positron \electron pair. This mechanism could provide an explanation to the \gls{miniboone} low energy excess \cite{SBN_paper}\cite{dark_neutrino}. 
+    \item Dark Neutrinos - A beam neutrino interacts with an argon nucleus and scatters to a dark neutrino. The dark neutrino decays to a dark boson (and neutrino) and in turn the dark boson decays to an \positron \electron pair. This mechanism could provide an explanation to the \gls{miniboone} low energy excess \cite{SBN_paper}\cite{dark_neutrino}. 
 \end{itemize}
 
 
